# notebook-llm-lab

./: .env  .gitattributes  .gitignore  .gitnore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  test_neo4j.py
.github/workflows/: ci.yml
.ipynb_checkpoints/: README-checkpoint.md  Untitled-checkpoint.ipynb
data/strava/raw/: 5670143478.gpx
notebooks/: 02_data_cleaning_and_summary.ipynb  03_exploratory_run_analysis.ipynb  03_neo4j_ingestion.ipynb  03b_graph_exploration.ipynb  03b_neo4j_ingestion.ipynb  04_feature_engineering_mlprep.ipynb  05_clustering_and_explainability.ipynb  06_modeling_and_explainability.ipynb  07_visualization_and_dashboard.ipynb  Lesson_9.ipynb  main.ipynb
notebooks/.ipynb_checkpoints/: 02_data_cleaning_and_summary-checkpoint.ipynb  03_neo4j_ingestion-checkpoint.ipynb  delete-checkpoint.ipynb  eda_run_data-checkpoint.ipynb  main-checkpoint.ipynb
notebooks/outputs/results/: quantization_summary.txt
scripts/: batch_convert_fit.py  fit_to_parquet.py  run_unit_tests.py  test_fit_reader.py
src/llm_utils/: llm_client.py
src/notebook_llm_lab.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/notebook_llm_lab/ingestion/: fit_reader.py
src/notebook_llm_lab/llm_utils/: llm_client.py
src/test/: test_fit_reader_extraction.py  test_llm.py
